Updated Portuguese translations by Nuno Miguel <nunis@netcabo.pt>
(Old svn revision: 26501)

--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -5,15 +5,15 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.4\n"
+"Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-01-09 23:46+0100\n"
-"PO-Revision-Date: 2007-06-16 12:45+0100\n"
+"POT-Creation-Date: 2007-05-20 13:45+0200\n"
+"PO-Revision-Date: 2007-12-18 14:09+0100\n"
 "Last-Translator: Nuno Miguel <nunis@netcabo.pt>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language-Team: \n"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
@@ -27,7 +27,7 @@ msgstr "Renderizar diferentemente baseado no estado da selecção."
 
 #: ../exo/exo-cell-renderer-icon.c:167
 msgid "Icon"
-msgstr "Ícone:"
+msgstr "Ícone"
 
 #: ../exo/exo-cell-renderer-icon.c:168
 msgid "The icon to render."
@@ -39,7 +39,7 @@ msgstr "tamanho"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr "O tamanho do ícone a renderizar em píxeis."
+msgstr "O tamanho do ícone a renderizar em pixeis."
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:770
 #: ../exo/exo-mount-point.c:208
@@ -187,7 +187,7 @@ msgstr "Ícones de Locais"
 #. EXO_ICON_CHOOSER_CONTEXT_STATUS
 #: ../exo/exo-icon-chooser-dialog.c:105
 msgid "Status Icons"
-msgstr "Ícones de Status"
+msgstr "Ícones de Estado"
 
 #. EXO_ICON_CHOOSER_CONTEXT_OTHER
 #: ../exo/exo-icon-chooser-dialog.c:107
@@ -208,7 +208,7 @@ msgstr "Ficheiros de Imagens"
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
 msgid "Select _icon from:"
-msgstr "Escolher _ícone de:"
+msgstr "Escolher í_cone de:"
 
 #: ../exo/exo-icon-view.c:651
 msgid "Column Spacing"
@@ -232,7 +232,7 @@ msgstr "Activar Procura"
 
 #: ../exo/exo-icon-view.c:684
 msgid "View allows user to search through columns interactively"
-msgstr "Visão permite ao utilizador procurar através das colunas interactivamente"
+msgstr "Vista permite ao utilizador procurar através das colunas interactivamente"
 
 #: ../exo/exo-icon-view.c:701
 msgid "Width for each item"
@@ -304,7 +304,7 @@ msgstr "Coluna do modelo a procurar quando procurando por item"
 
 #: ../exo/exo-icon-view.c:862
 msgid "Selection mode"
-msgstr "Modo de seleção"
+msgstr "Modo de selecção"
 
 #: ../exo/exo-icon-view.c:863
 msgid "The selection mode"
@@ -318,7 +318,7 @@ msgstr "Clique Único"
 #: ../exo/exo-icon-view.c:879
 #: ../exo/exo-tree-view.c:167
 msgid "Whether the items in the view can be activated with single clicks"
-msgstr "Se os itens da visão podem ser ativados com cliques únicos"
+msgstr "Se os itens na vista podem ser activados com cliques únicos"
 
 #: ../exo/exo-icon-view.c:895
 #: ../exo/exo-tree-view.c:183
@@ -328,7 +328,7 @@ msgstr "Tempo de Clique Único"
 #: ../exo/exo-icon-view.c:896
 #: ../exo/exo-tree-view.c:184
 msgid "The amount of time after which the item under the mouse cursor will be selected automatically in single click mode"
-msgstr "A quantidade de tempo após a qual o item sob o ponteiro do mouse será selecionado automaticamente em modo de clique único"
+msgstr "A quantidade de tempo após a qual o item sob o ponteiro do rato será seleccionado automaticamente em modo de clique único"
 
 #: ../exo/exo-icon-view.c:911
 msgid "Spacing"
@@ -348,7 +348,7 @@ msgstr "Cor da caixa de selecção"
 
 #: ../exo/exo-icon-view.c:942
 msgid "Selection Box Alpha"
-msgstr "Alpha da Caixa de Selecção"
+msgstr "Alfa da Caixa de Selecção"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Opacity of the selection box"
@@ -361,7 +361,7 @@ msgstr "Pré-visualização"
 #: ../exo/exo-thumbnail-preview.c:139
 #: ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
-msgstr "Nenhum ficheiro selecionado"
+msgstr "Nenhum ficheiro seleccionado"
 
 #: ../exo/exo-thumbnail-preview.c:299
 msgid "Block Device"
@@ -369,7 +369,7 @@ msgstr "Bloquear Dispositivo"
 
 #: ../exo/exo-thumbnail-preview.c:304
 msgid "Character Device"
-msgstr "Dispositivo de Caractere"
+msgstr "Dispositivo de Caracter"
 
 #: ../exo/exo-thumbnail-preview.c:309
 msgid "Folder"
@@ -389,7 +389,7 @@ msgstr "_Adicionar uma nova barra de ferramentas"
 
 #: ../exo/exo-toolbars-editor.c:230
 msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Arraste um item sobre a barras de ferramentas para adicioná-lo, a partir das barras de ferramentas para a tabela de ítens para removê-lo."
+msgstr "Arraste um item sobre a barras de ferramentas para adicioná-lo, a partir das barras de ferramentas para a tabela de itens para removê-lo."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -401,11 +401,11 @@ msgstr "E_stilo de Barra de Ferramentas"
 
 #: ../exo/exo-toolbars-view.c:766
 msgid "_Desktop Default"
-msgstr "Padrão de _Área de Trabalho"
+msgstr "Padrão de Área de _Trabalho"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Icons only"
-msgstr "Apenas _ícones"
+msgstr "Apenas í_cones"
 
 #: ../exo/exo-toolbars-view.c:784
 msgid "_Text only"
@@ -460,7 +460,7 @@ msgstr "A quantidade de espaço entre duas linhas consecutivas"
 
 #: ../exo/exo-wrap-table.c:190
 msgid "Homogeneous"
-msgstr "Homegêneo"
+msgstr "Homogéneo"
 
 #: ../exo/exo-wrap-table.c:191
 msgid "Whether the children should be all the same size"
@@ -485,7 +485,7 @@ msgstr "Comando de reinício de sessão"
 #: ../exo-csource/main.c:283
 #, c-format
 msgid "Usage: %s [options] [file]\n"
-msgstr "Uso: %s [opções] [arquivo]\n"
+msgstr "Uso: %s [opções] [ficheiro]\n"
 
 #: ../exo-csource/main.c:284
 #, c-format
@@ -514,7 +514,7 @@ msgstr "  --name=Nome identificador de variável/macro de C\n"
 
 #: ../exo-csource/main.c:291
 msgid "  --build-list      Parse (name, file) pairs\n"
-msgstr "  --build-list      Interpreta pares (nome, arquivo)\n"
+msgstr "  --build-list      Interpreta pares (nome, ficheiro)\n"
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
@@ -645,18 +645,18 @@ msgstr "Nenhum ícone"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:419
 msgid "Options:"
-msgstr "Opções"
+msgstr "Opções:"
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:430
 msgid "Use _startup notification"
-msgstr "Usar _notificação de inicialização"
+msgstr "Usar _notificação de arranque"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Selecione esta opção para habilitar a notificação de inicialização quando o comando é executado a partir do gerenciador de arquivos ou do menu. Nem todas as aplicações suportam notificação de inicialização."
+msgstr "Seleccione esta opção para ligar a notificação de arranque quando o comando é executado a partir do gestor de ficheiros ou do menu. Nem todas as aplicações suportam notificação de arranque."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -667,12 +667,12 @@ msgstr "Executar no _terminal"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:444
 msgid "Select this option to run the command in a terminal window."
-msgstr "Selecione esta opção para executar o comando em uma janela de terminal."
+msgstr "Seleccione esta opção para executar o comando numa janela de terminal."
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
 msgid "Select an icon"
-msgstr "Selecione um ícone"
+msgstr "Seleccione um ícone"
 
 #. --- constants ---
 #: ../exo-desktop-item-edit/main.c:50
@@ -693,11 +693,11 @@ msgstr "Editar Ligação"
 
 #: ../exo-desktop-item-edit/main.c:72
 msgid "Create a new desktop file in the given directory"
-msgstr "Criar um novo arquivo de ambiente de trabalho no diretório dado"
+msgstr "Criar um novo ficheiro de ambiente de trabalho no directório dado"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "Tipo de arquivo de ambiente de trabalho a criar (Aplicação ou Ligação)"
+msgstr "Tipo de ficheiro de ambiente de trabalho a criar (Aplicação ou Ligação)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
@@ -728,13 +728,13 @@ msgstr "Mostra informação de versão e sai"
 #. initialize Gtk+
 #: ../exo-desktop-item-edit/main.c:125
 msgid "[FILE|FOLDER]"
-msgstr "[ARQUIVO|PASTA]"
+msgstr "[FICHEIRO|PASTA]"
 
 #: ../exo-desktop-item-edit/main.c:138
 #: ../exo-mount/main.c:108
 #: ../exo-mount-notify/main.c:153
 msgid "Failed to open display"
-msgstr "Falha a abrir ecrã: %s"
+msgstr "Falha ao abrir o ecrã"
 
 #: ../exo-desktop-item-edit/main.c:168
 msgid "No file/folder specified"
@@ -816,7 +816,7 @@ msgstr "Disco flash"
 #: ../exo-hal/exo-hal.c:494
 #, c-format
 msgid "%s Music Player"
-msgstr "Reprodutor Música %s"
+msgstr "Reprodutor de Música %s"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:509
@@ -842,7 +842,7 @@ msgstr "Disco %s"
 #. special case for pure audio disc
 #: ../exo-hal/exo-hal.c:766
 msgid "Audio CD"
-msgstr "CD Audio"
+msgstr "CD Áudio"
 
 #: ../exo-hal/exo-hal.c:802
 #, c-format
@@ -880,7 +880,7 @@ msgid ""
 "hyperlinks and display help contents."
 msgstr ""
 "O Navegador Web preferido será usado para abrir\n"
-"ponteiros e mostrar o conteúdo da ajuda."
+"links e mostrar o conteúdo da ajuda."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
 msgid "Mail Reader"
@@ -949,15 +949,15 @@ msgstr "Seleccione a aplicação"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid "Choose a custom Web Browser"
-msgstr "Escolha um outro Navegador Web"
+msgstr "Escolha um Navegador Web"
 
 #: ../exo-helper/exo-helper-chooser.c:536
 msgid "Choose a custom Mail Reader"
-msgstr "Escolha um outro Leitor de E-mail"
+msgstr "Escolha um Leitor de E-mail"
 
 #: ../exo-helper/exo-helper-chooser.c:537
 msgid "Choose a custom Terminal Emulator"
-msgstr "Escolha um outro Emulador de Terminal"
+msgstr "Escolha um Emulador de Terminal"
 
 #: ../exo-helper/exo-helper-chooser.c:542
 msgid ""
@@ -997,14 +997,14 @@ msgstr "Usar uma aplicação particular que não está incluída na lista acima.
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:141
 msgid "Choose Preferred Application"
-msgstr "Escolha as Aplicações Preferidas"
+msgstr "Escolha a Aplicação Preferida"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:284
 msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
-"Por favor escolha agora seu Navegador Web\n"
+"Por favor escolha agora o seu Navegador Web\n"
 "preferido e clique OK para prosseguir."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:286
@@ -1105,11 +1105,11 @@ msgstr "Navegador Web Konqueror"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr "Navegador de Texto Links"
+msgstr "Browser de Texto Links"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr "Navegador de Texto Lynx"
+msgstr "Browser de Texto Lynx"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
@@ -1157,7 +1157,7 @@ msgstr "RXVT Unicode"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
 msgid "W3M Text Browser"
-msgstr "Navegador de Texto W3M"
+msgstr "Browser de Texto W3M"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
@@ -1206,7 +1206,7 @@ msgstr "Discos vazios não podem ser montados, use um programa para gravação d
 
 #: ../exo-mount/exo-mount-hal.c:857
 msgid "Audio CDs cannot be mounted, use Xfmedia to play the audio tracks"
-msgstr "CDs Audio não podem ser montados, use o Xfmedia para ouvir o CD"
+msgstr "CDs Áudio não podem ser montados, use o Xfmedia para ouvir o CD"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:942
@@ -1248,7 +1248,7 @@ msgstr "Montar através de ficheiro de dispositivo"
 
 #: ../exo-mount/main.c:73
 msgid "Don't show any dialogs"
-msgstr "Não monstrar caixas de diálogo"
+msgstr "Não mostrar caixas de diálogo"
 
 #. the caller must specify either a HAL UDI or a device file
 #: ../exo-mount/main.c:138
@@ -1277,17 +1277,17 @@ msgstr "Não pode ejectar e desmontar ao mesmo tempo"
 #: ../exo-mount/main.c:330
 #, c-format
 msgid "Failed to eject \"%s\""
-msgstr "Falha ejectar \"%s\"."
+msgstr "Falhou ao ejectar \"%s\"."
 
 #: ../exo-mount/main.c:332
 #, c-format
 msgid "Failed to unmount \"%s\""
-msgstr "Falha desmontar \"%s\"."
+msgstr "Falhou a desmontar \"%s\"."
 
 #: ../exo-mount/main.c:334
 #, c-format
 msgid "Failed to mount \"%s\""
-msgstr "Falha a montar \"%s\"."
+msgstr "Falhou a montar \"%s\"."
 
 #. tell the user that the device can be removed now
 #: ../exo-mount-notify/main.c:111
@@ -1360,7 +1360,7 @@ msgid ""
 "  --working-directory DIRECTORY       Default working directory for applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIRETÓRIO       Diretório de trabalho padrão para aplicações\n"
+"  --working-directory DIRECTÓRIO       Directório de trabalho padrão para aplicações\n"
 "                                      ao usar a opção --launch."
 
 #: ../exo-open/main.c:72
@@ -1390,9 +1390,9 @@ msgid ""
 msgstr ""
 "Se não especificar a opção --launch, exo-open irá abrir todas as URLs\n"
 "especificadas com seus tratadores de URL preferidos. Caso contrário, se\n"
-"especificar a opção --launch, você pode selecionar qual aplicação preferida\n"
-"deseja executar e passar parâmetros adicionais para a aplicação (isto é,\n"
-"para TerminalEmulator pode passar a linha de comando que deve ser\n"
+"especificar a opção --launch, pode seleccionar qual aplicação preferida\n"
+"deseja executar e passar parâmetros adicionais para a aplicação (i.e.para\n"
+"TerminalEmulator pode passar a linha de comando que deve ser\n"
 "executada dentro do terminal)."
 
 #: ../exo-open/main.c:149
