--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-23  Jean-François Wauthy <pollux@xfce.org>
+
+	* pt_PT.po: Updated Portuguese translations by Nuno Miguel
+	<nunis@netcabo.pt>
+	
 2007-12-02  Benedikt Meurer <benny@xfce.org>
 
 	* === Released 0.3.4 ===
