Greek translations update [thunar, exo]
(Old svn revision: 26633)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-23  Stavros Giannouris <stavrosg@hellug.gr>
+
+	* el.po: Updated Greek translation.
+
 2007-12-23  Jean-François Wauthy <pollux@xfce.org>
 
 	* pt_PT.po: Updated Portuguese translations by Nuno Miguel
