--- a/po/el.po
+++ b/po/el.po
@@ -1,7 +1,7 @@
 # Greek translations for exo package.
-# Copyright (C) 2004-2006 os-cillation e.K.
+# Copyright (C) 2004-2008 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Stavros Giannouris <stavrosg@hellug.gr>, 2005, 2006, 2007.
+# Stavros Giannouris <stavrosg@hellug.gr>, 2005, 2006, 2007, 2008.
 # Stathis Kamperis <ekamperi@auth.gr>, 2006.
 #
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-01-19 10:09+0200\n"
+"PO-Revision-Date: 2008-02-23 17:00+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg@hellug.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
@@ -516,11 +516,11 @@ msgstr "  --build-list         Ανάλυση ζευγαριών (όνομα, α
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
-msgstr ""
+msgstr "  --strip-comments  Αφαίρεση σχολίων από αρχεία XML\n"
 
 #: ../exo-csource/main.c:293
 msgid "  --strip-content   Remove node contents from XML files\n"
-msgstr ""
+msgstr "  --strip-content   Αφαίρεση δεδομένων από αρχεία XML\n"
 
 #: ../exo-csource/main.c:303 ../exo-desktop-item-edit/main.c:153
 #: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:167
@@ -1147,9 +1147,8 @@ msgid "Opera Mail"
 msgstr "Αναγνώστης αλληλογραφίας Opera"
 
 #: ../exo-helper/helpers/sylpheed-claws.desktop.in.in.h:1
-#, fuzzy
 msgid "Claws Mail"
-msgstr "Mozilla Mail"
+msgstr "Claws Mail"
 
 #: ../exo-helper/helpers/sylpheed.desktop.in.in.h:1
 msgid "Sylpheed"
