--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-05	Mike Massonnet <mmassonnet@xfce.org>
+
+	* zh_CN.po: Add Chinese translation by chao sye <chao-7410@163.com>.
+
 2008-02-23  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
