Update Catalan translation
(Old svn revision: 26684)

--- a/po/ca.po
+++ b/po/ca.po
@@ -3,15 +3,15 @@
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
 # Pau Ruŀlan Ferragut <paurullan@bulma.net> 2005, 2006, 2007
-# Carles Muñoz Gorriz <paurullan@bulma.net>, 2006.
+# Carles Muñoz Gorriz <paurullan@bulma.net>, 2006, 2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-04-05 13:15+0200\n"
-"Last-Translator: Pau Ruŀlan Ferragut <paurullan@bulma.net>\n"
+"PO-Revision-Date: 2008-03-15 16:51+0100\n"
+"Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: Catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -517,11 +517,11 @@ msgstr "  --build-list      Analitza parelles (nom, fitxer)\n"
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
-msgstr ""
+msgstr "  --strip-comments  Treu els comentaris del fitxers XML\n"
 
 #: ../exo-csource/main.c:293
 msgid "  --strip-content   Remove node contents from XML files\n"
-msgstr ""
+msgstr "  --strip-content  Treu els continguts del nodes dels fitxers XML\n"
 
 #: ../exo-csource/main.c:303 ../exo-desktop-item-edit/main.c:153
 #: ../exo-mount/main.c:122 ../exo-mount-notify/main.c:167
@@ -1344,8 +1344,8 @@ msgid ""
 "There is data that needs to be written to the device \"%s\" before it can be "
 "removed. Please do not remove the media or disconnect the drive."
 msgstr ""
-"Hi ha dades pendents per escriure al dispositiu «%s» abans d’extreurer-lo. "
-"Si us plau no extregueu el mitjà o desconnecteu la unitat."
+"Hi ha dades pendents per escriure al dispositiu «%s» abans d’extreurer-lo. Si "
+"us plau no extregueu el mitjà o desconnecteu la unitat."
 
 #: ../exo-open/main.c:59
 msgid "Usage: exo-open [URLs...]"
