Update Portuguese translation
(Old svn revision: 26685)

--- a/po/pt_PT.po
+++ b/po/pt_PT.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-12-18 14:09+0100\n"
+"PO-Revision-Date: 2008-02-26 12:32+0100\n"
 "Last-Translator: Nuno Miguel <nunis@netcabo.pt>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1317,7 +1317,7 @@ msgstr "A desmontar dispositivo"
 #: ../exo-mount-notify/main.c:231
 #, c-format
 msgid "The device \"%s\" is being unmounted by the system. Please do not remove the media or disconnect the drive."
-msgstr "Dispositivo \"%s\" a ser desmontado pelo sistema. Não remova nem desligue a drive."
+msgstr "Dispositivo \"%s\" a ser desmontado pelo sistema. Por favor não remova nem desligue a drive."
 
 #. not read-only, writing back data
 #: ../exo-mount-notify/main.c:238
