Update Latvian translation
(Old svn revision: 26827)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-12  Mike Massonnet <mmassonnet@xfce.org>
+
+    * lv.po: Update Latvian translation (Rihards Prieditis <rprieditis@gmail.com>)
+
 2008-03-18	Mike Massonnet <mmassonnet@xfce.org>
 
 	* pt_PT.po: Update Portuguese translation by Nuno Miguel
