Updated Brazilian Portuguese translation.
(Old svn revision: 26925)

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -661,7 +661,7 @@ msgstr "Usar _notificação de iniciação"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Selecione esta opção para habilitar a notificação de iniciação quando o comando é executado a partir do gerente de arquivos ou do menu. Nem todas aplicações suportam notificação de iniciação."
+msgstr "Selecione esta opção para habilitar a notificação de iniciação quando o comando é executado a partir do gerenciador de arquivos ou do menu. Nem todas aplicações suportam notificação de iniciação."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
