--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-04  Og Maciel <ogmaciel@gnome.org>
+
+    * pt_BR.po: Updated Brazilian Portuguese translation
+
 2008-04-27	Mike Massonnet <mmassonnet@xfce.org>
 
 	* ku.po, LINGUAS: Add Kurdish translation (Erdal Ronahi
