--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@
 # Joao Pedrosa <joaopedrosa@gmail.com>, 2005.
 # Adriano Winter Bess <awbess@gmail.com>, 2006.
 # Pablo Lerina <pabloalr@gmail.com>, 2007.
-# Og Maciel <ogmaciel@gnome.org>, 2007.
+# Og Maciel <ogmaciel@gnome.org>, 2007-2008.
 #
 msgid ""
 msgstr ""
@@ -579,7 +579,7 @@ msgstr "Por favor, relate problemas para <%s>.\n"
 #. allocate the file chooser
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:290
 msgid "Select an Application"
-msgstr "Selecione uma Aplicação"
+msgstr "Selecione um aplicativo"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:299
 #: ../exo-helper/exo-helper-chooser.c:432
@@ -702,7 +702,7 @@ msgstr "Criar um novo arquivo de área de trabalho no diretório fornecido"
 
 #: ../exo-desktop-item-edit/main.c:73
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "Tipo de arquivo de área de trabalho para criar (Aplicação ou Ligação)"
+msgstr "Tipo de arquivo de área de trabalho para criar (aplicativo ou link)"
 
 #: ../exo-desktop-item-edit/main.c:74
 msgid "Preset name when creating a desktop file"
@@ -925,15 +925,15 @@ msgstr "Falhou ao abrir o navegador de documentação."
 #: ../exo-helper/exo-helper-chooser.c:184
 #: ../exo-helper/exo-helper-chooser.c:191
 msgid "Press left mouse button to change the selected application."
-msgstr "Pressione o botão esquerdo do mouse para mudar a aplicação selecionada."
+msgstr "Pressione o botão esquerdo do mouse para mudar o aplicativo selecionado."
 
 #: ../exo-helper/exo-helper-chooser.c:190
 msgid "Application Chooser Button"
-msgstr "Botão de Escolha de Aplicação"
+msgstr "Botão de escolha de aplicativo"
 
 #: ../exo-helper/exo-helper-chooser.c:334
 msgid "No application selected"
-msgstr "Nenhuma aplicação selecionada"
+msgstr "Nenhum aplicativo selecionado"
 
 #: ../exo-helper/exo-helper-chooser.c:350
 msgid "Failed to set default Web Browser"
@@ -950,7 +950,7 @@ msgstr "Falhou ao definir o Emulador de Terminal padrão"
 #. allocate the chooser
 #: ../exo-helper/exo-helper-chooser.c:422
 msgid "Select application"
-msgstr "Selecione a aplicação"
+msgstr "Selecione o aplicativo"
 
 #: ../exo-helper/exo-helper-chooser.c:535
 msgid "Choose a custom Web Browser"
@@ -969,7 +969,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
-"Especifique a aplicação que você deseja usar\n"
+"Especifique o aplicativo que você deseja usar\n"
 "como Navegador Web padrão para o Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:543
@@ -977,7 +977,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
-"Especifique a aplicação que você deseja usar\n"
+"Especifique o aplicativo que você deseja usar\n"
 "como Leitor de E-mail padrão para o Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:544
@@ -985,7 +985,7 @@ msgid ""
 "Specify the application you want to use\n"
 "as default Terminal Emulator for Xfce:"
 msgstr ""
-"Especifique a aplicação que você deseja usar\n"
+"Especifique o aplicativo que você deseja usar\n"
 "como Emulador de Terminal padrão para o Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:610
@@ -998,7 +998,7 @@ msgstr "_Outro..."
 
 #: ../exo-helper/exo-helper-chooser.c:794
 msgid "Use a custom application which is not included in the above list."
-msgstr "Usar uma aplicação particular que não está incluída na lista acima."
+msgstr "Usar um aplicativo particular que não está incluído na lista acima."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:141
 msgid "Choose Preferred Application"
@@ -1197,7 +1197,7 @@ msgstr "Você não possui privilégios para ejetar o volume \"%s\""
 #: ../exo-mount/exo-mount-hal.c:600
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being ejected"
-msgstr "Alguma aplicação esta impedindo o volume \"%s\" de ser ejetado"
+msgstr "Algum aplicativo esta impedindo o volume \"%s\" de ser ejetado"
 
 #. TRANSLATORS: User tried to mount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:831
@@ -1223,7 +1223,7 @@ msgstr "Você não possui privilégios para desmontar o volume \"%s\""
 #: ../exo-mount/exo-mount-hal.c:947
 #, c-format
 msgid "An application is preventing the volume \"%s\" from being unmounted"
-msgstr "Alguma aplicação esta impedindo que o volume \"%s\" seja desmontado"
+msgstr "Algum aplicativo esta impedindo que o volume \"%s\" seja desmontado"
 
 #. TRANSLATORS: HAL can only unmount volumes that were mounted via HAL.
 #: ../exo-mount/exo-mount-hal.c:952
@@ -1356,7 +1356,7 @@ msgid ""
 "                                      TYPE with the optional PARAMETERs, where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch TIPO [PARÂMETROs...]       Executar a aplicação preferida do\n"
+"  --launch TIPO [PARÂMETROs...]       Executar o aplicativo preferido do\n"
 "                                      TIPO com PARÂMETROs opcionais, onde\n"
 "                                      TIPO é um dos seguintes valores."
 
@@ -1395,15 +1395,15 @@ msgid ""
 msgstr ""
 "Se você não especificar a opção --launch, exo-open irá abrir todas os URLs\n"
 "especificados com seus tratadores de URL preferidos. Caso contrário, se você\n"
-"especificar a opção --launch, você pode selecionar qual aplicação preferida\n"
-"você deseja executar e passar parâmetros adicionais para a aplicação (isto é,\n"
+"especificar a opção --launch, você pode selecionar qual aplicativo preferido\n"
+"você deseja executar e passar parâmetros adicionais para o aplicativo (isto é,\n"
 "para TerminalEmulator você pode passar a linha de comando que deve ser\n"
 "executada dentro do terminal)."
 
 #: ../exo-open/main.c:149
 #, c-format
 msgid "Failed to launch preferred application for category \"%s\"."
-msgstr "Falhou ao executar aplicação preferida para categoria \"%s\"."
+msgstr "Falhou ao executar o aplicativo preferido para a categoria \"%s\"."
 
 #: ../exo-open/main.c:170
 #, c-format
