--- a/po/ar.po
+++ b/po/ar.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: exo 0.3.4\n"
+"Project-Id-Version: libexo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
 "PO-Revision-Date: 2007-02-11 02:15+0200\n"
