* exo-csource/main.c: Don't strip text between nodes 	  with --strip-content. This will make stripping work 	  on glade files. 	* configure.in.in: Version bump from 0.3.7 to 0.3.7.1.
(Old svn revision: 27330)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-07-17	Nick Schermer <nick@xfce.org>
+
+	* exo-csource/main.c: Don't strip text between nodes 
+	  with --strip-content. This will make stripping work
+	  on glade files.
+	* configure.in.in: Version bump from 0.3.7 to 0.3.7.1.
+
 2007-12-02	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
