--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-10  Maximilian Schleiss <maximilian@xfce.org>
+
+	* pl.po: Polish translation updated (Piotr Maliński)
+
 2008-07-15  Og Maciel <ogmaciel@gnome.org>
 
     * pt_BR.po: Updated Brazilian Portuguese translation
