2008-08-25  Brian Tarricone <kelnos@xfce.org>
    * exo-helper/exo-preferred-applications.desktop.in: Include
      preferred apps dialog in new settings manager.

(Old svn revision: 27571)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-08-25	Brian Tarricone <kelnos@xfce.org>
+
+	* exo-helper/exo-preferred-applications.desktop.in: Include
+	  preferred apps dialog in new settings manager.
+
 2008-08-12  Brian Tarricone <bjt23@cornell.edu>
 
 	* exo-mount/exo-mount-hal.c: Add support for mounting and
