--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-29  Maximilian Schleiss <maximilian@xfce.org>
+
+	* de.po: German translation updated (Fabian Nowak)
+
 2008-08-10  Maximilian Schleiss <maximilian@xfce.org>
 
 	* pl.po: Polish translation updated (Piotr Maliński)
