--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-09  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+
 2008-08-29  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: German translation updated (Fabian Nowak)
