--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-10 Peeter Vois <Peeter.Vois@proekspert.ee>
+
+	* et.po: Estonian translation update (Kristjan Siimson)
+	
 2008-09-09  Maximilian Schleiss <maximilian@xfce.org>
 
 	* es.po: Spanish translation update (Abel Martín)
