Commit NEWS file
(Old svn revision: 27841)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.3.80
+======
+- Include preferred apps dialog in the new settings manager.
+- Add support for mounting and unmounting encrypted volumes. (Bug #3349)
+- Don't strip text between nodes with --strip-content, this will make stripping work on glade files.
+
 0.3.4
 =====
 - Add option to exo-csource to strip comments from XML prior to embedding
