Updated and added Estonian translations for the libxfcegui4, terminal and mousepad trunk modules and libxfce4util branch 4.4 module Updated Indonesian translations for the xfce-utils, xfce4-mixer, xarchiver, xfwm4, xfcalendar and xfdesktop trunk modules Updated and added Spanish translations for the xfce4-appfinder, squeeze, libexo, xfce-utils, libxfce4menu, xfce4-session, xfce4-mixer, libxfce4util, libxfce4ui, xfce4-icon-theme, thunar, libxfcegui4, xfce4-panel, xfdesktop, xfce4-trigger-launcher, terminal, mousepad and xfmedia trunk modules Updated Russian translation for the xarchiver, libexo and libxfcegui4 trunk modules Updated and added German translation of the xfce4-settings and xfwm4 trunk modules Updated Japanese translation for the thunar module Updated Sinhalese translation for the libxfcegui4 trunk module
(Old svn revision: 28040)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-05  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+	* ru.po: Russian translation update (NIkitaBelobrov)
+
 2008-09-10 Peeter Vois <Peeter.Vois@proekspert.ee>
 
 	* et.po: Estonian translation update (Kristjan Siimson)
