--- a/po/es.po
+++ b/po/es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2008-09-05 22:41+0100\n"
+"PO-Revision-Date: 2008-09-29 19:44+0100\n"
 "Last-Translator: Abel Martín <abel.martin.ruiz@gmail.com>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -39,7 +39,6 @@ msgid "size"
 msgstr "tamaño"
 
 #: ../exo/exo-cell-renderer-icon.c:190
-#, fuzzy
 msgid "The size of the icon to render in pixels."
 msgstr "El tamaño del icono a dibujar en pixels"
 
@@ -49,17 +48,17 @@ msgstr "El tamaño del icono a dibujar en pixels"
 #: ../exo/exo-mount-point.c:425
 #, c-format
 msgid "Failed to open file \"%s\": %s"
-msgstr "Fallo al abrir fichero \"%s\": %s"
+msgstr "Fallo al abrir archivo \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:832
 #, c-format
 msgid "Failed to read file \"%s\": %s"
-msgstr "Fallo al abrir fichero \"%s\": %s"
+msgstr "Fallo al abrir archivo \"%s\": %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
 msgid "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
-msgstr "Fallo al cargar la imagen \"%s\": Razón desconocida, probablemente un fichero de imagen corrupto"
+msgstr "Fallo al cargar la imagen \"%s\": Razón desconocida, probablemente un archivo de imagen corrupto"
 
 #: ../exo/exo-icon-bar.c:249
 #: ../exo/exo-icon-view.c:783
@@ -73,7 +72,7 @@ msgstr "La orientación de la barra de iconos"
 #: ../exo/exo-icon-bar.c:266
 #: ../exo/exo-icon-view.c:800
 msgid "Pixbuf column"
-msgstr "Columna Pixbuf"
+msgstr "Columna pixbuf"
 
 #: ../exo/exo-icon-bar.c:267
 #: ../exo/exo-icon-view.c:801
@@ -119,7 +118,7 @@ msgstr "Color de borde del item activo"
 #: ../exo/exo-icon-bar.c:333
 #: ../exo/exo-icon-bar.c:334
 msgid "Active item text color"
-msgstr "Color de texto del item activo"
+msgstr "Color de texto del elemento activo"
 
 #: ../exo/exo-icon-bar.c:340
 #: ../exo/exo-icon-bar.c:341
@@ -179,7 +178,7 @@ msgstr "Denominaciones Internacionales"
 #. EXO_ICON_CHOOSER_CONTEXT_MIME_TYPES
 #: ../exo/exo-icon-chooser-dialog.c:101
 msgid "File Type Icons"
-msgstr "Iconos de Tipo de Fichero"
+msgstr "Iconos de Tipo de Archivo"
 
 #. EXO_ICON_CHOOSER_CONTEXT_PLACES
 #: ../exo/exo-icon-chooser-dialog.c:103
@@ -205,7 +204,7 @@ msgstr "Todos los Iconos"
 #: ../exo/exo-icon-chooser-dialog.c:115
 #: ../exo/exo-icon-chooser-dialog.c:262
 msgid "Image Files"
-msgstr "Ficheros de Imagenes"
+msgstr "Archivos de Imagenes"
 
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
@@ -246,10 +245,9 @@ msgstr "El ancho usado para cada elemento"
 
 #: ../exo/exo-icon-view.c:720
 msgid "Layout mode"
-msgstr "Modo de Disposición"
+msgstr "Modo de disposición"
 
 #: ../exo/exo-icon-view.c:721
-#, fuzzy
 msgid "The layout mode"
 msgstr "El modo de disposición"
 
@@ -262,14 +260,12 @@ msgid "Space which is inserted at the edges of the icon view"
 msgstr "Espacio insertado en los bordes de la vista de icono"
 
 #: ../exo/exo-icon-view.c:754
-#, fuzzy
 msgid "Markup column"
-msgstr "Columna de markup"
+msgstr "Columna de marcado"
 
 #: ../exo/exo-icon-view.c:755
-#, fuzzy
 msgid "Model column used to retrieve the text if using Pango markup"
-msgstr "Modelo de columna usado para recuperar el texto si se usa Pango markup"
+msgstr "Modelo de columna usado para recuperar el texto si se usa marcado de Pango"
 
 #: ../exo/exo-icon-view.c:769
 msgid "Icon View Model"
@@ -304,9 +300,8 @@ msgid "Search Column"
 msgstr "Colúmna de Búsqueda"
 
 #: ../exo/exo-icon-view.c:848
-#, fuzzy
 msgid "Model column to search through when searching through item"
-msgstr "Columna modelo para buscar entre elementos"
+msgstr "Modelo de columna para buscar entre elementos"
 
 #: ../exo/exo-icon-view.c:862
 msgid "Selection mode"
@@ -314,7 +309,7 @@ msgstr "Modo de selección"
 
 #: ../exo/exo-icon-view.c:863
 msgid "The selection mode"
-msgstr "Modo de selección"
+msgstr "El modo de selección"
 
 #: ../exo/exo-icon-view.c:878
 #: ../exo/exo-tree-view.c:166
@@ -346,7 +341,7 @@ msgstr "Espacio que se inserta entre celdas de un elemento"
 
 #: ../exo/exo-icon-view.c:935
 msgid "Selection Box Color"
-msgstr "Color de caja de selección"
+msgstr "Color de Caja de Selección"
 
 #: ../exo/exo-icon-view.c:936
 msgid "Color of the selection box"
@@ -354,21 +349,20 @@ msgstr "Color de la caja de selección"
 
 #: ../exo/exo-icon-view.c:942
 msgid "Selection Box Alpha"
-msgstr "Alfa de caja de selección"
+msgstr "Alfa de Caja de Selección"
 
 #: ../exo/exo-icon-view.c:943
 msgid "Opacity of the selection box"
 msgstr "Opacidad de la caja de selección"
 
 #: ../exo/exo-thumbnail-preview.c:123
-#, fuzzy
 msgid "Preview"
-msgstr "Preview"
+msgstr "Vista previa"
 
 #: ../exo/exo-thumbnail-preview.c:139
 #: ../exo/exo-thumbnail-preview.c:281
 msgid "No file selected"
-msgstr "No se seleccionó ningún fichero"
+msgstr "No se seleccionó ningún archivo"
 
 #: ../exo/exo-thumbnail-preview.c:299
 msgid "Block Device"
@@ -380,7 +374,7 @@ msgstr "Dispositivo de Caracteres"
 
 #: ../exo/exo-thumbnail-preview.c:309
 msgid "Folder"
-msgstr "Carpeta"
+msgstr "Directorio"
 
 #: ../exo/exo-thumbnail-preview.c:314
 msgid "FIFO"
@@ -395,9 +389,8 @@ msgid "_Add a new toolbar"
 msgstr "_Añadir una nueva barra de herramientas"
 
 #: ../exo/exo-toolbars-editor.c:230
-#, fuzzy
 msgid "Drag an item onto the toolbars above to add it, from the toolbars in the items table to remove it."
-msgstr "Arrastrar un elemento sobre la barra de herramientas para añadirlo, desde la barra de herramientas a la tabla de elementos para borrarlo."
+msgstr "Arrastrar un elemento sobre la barra de herramientas de encima para añadirlo, desde la barra de herramientas a la tabla de elementos para borrarlo."
 
 #: ../exo/exo-toolbars-editor.c:543
 msgid "Separator"
@@ -471,9 +464,8 @@ msgid "Homogeneous"
 msgstr "Homogéneo"
 
 #: ../exo/exo-wrap-table.c:191
-#, fuzzy
 msgid "Whether the children should be all the same size"
-msgstr "Si el hijo debería ser del mismo tamaño"
+msgstr "Define si el hijo debería ser del mismo tamaño"
 
 #: ../exo/exo-xsession-client.c:143
 msgid "Window group"
@@ -481,7 +473,7 @@ msgstr "Grupo de ventanas"
 
 #: ../exo/exo-xsession-client.c:144
 msgid "Window group leader"
-msgstr "Líder de grupo de ventanas"
+msgstr "Líder del grupo de ventanas"
 
 #: ../exo/exo-xsession-client.c:154
 msgid "Restart command"
@@ -494,12 +486,12 @@ msgstr "Comando de reinicio de sesión"
 #: ../exo-csource/main.c:283
 #, c-format
 msgid "Usage: %s [options] [file]\n"
-msgstr "Uso: %s [opciones] [fichero]\n"
+msgstr "Uso: %s [opciones] [archivo]\n"
 
 #: ../exo-csource/main.c:284
 #, c-format
 msgid "       %s [options] --build-list [[name file]...]\n"
-msgstr "       %s [opciones] --build-list [[nombre de fichero]]...]\n"
+msgstr "       %s [opciones] --build-list [[nombre de archivo]]...]\n"
 
 #: ../exo-csource/main.c:286
 msgid "  -h, --help        Print this help message and exit\n"
@@ -527,11 +519,11 @@ msgstr "  --build-list      Parsear pares (nombre, archivo)\n"
 
 #: ../exo-csource/main.c:292
 msgid "  --strip-comments  Remove comments from XML files\n"
-msgstr "  --strip-comments  Borrar comentarios de ficheros XML\n"
+msgstr "  --strip-comments  Borrar comentarios de archivos XML\n"
 
 #: ../exo-csource/main.c:293
 msgid "  --strip-content   Remove node contents from XML files\n"
-msgstr "  --strip-content   Borrar contenidos de nodos de ficheros XML\n"
+msgstr "  --strip-content   Borrar contenidos de nodos de archivos XML\n"
 
 #: ../exo-csource/main.c:303
 #: ../exo-desktop-item-edit/main.c:153
@@ -588,12 +580,12 @@ msgstr "Seleccione una Aplicación"
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:299
 #: ../exo-helper/exo-helper-chooser.c:432
 msgid "All Files"
-msgstr "Todos los Ficheros"
+msgstr "Todos los Archivos"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:304
 #: ../exo-helper/exo-helper-chooser.c:437
 msgid "Executable Files"
-msgstr "Ficheros Ejecutables"
+msgstr "Archivos Ejecutables"
 
 #: ../exo-desktop-item-edit/exo-die-command-entry.c:319
 #: ../exo-helper/exo-helper-chooser.c:452
@@ -665,7 +657,7 @@ msgstr "Usar notificación de _inicio"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid "Select this option to enable startup notification when the command is run from the file manager or the menu. Not every application supports startup notification."
-msgstr "Seleccione esta opción para habilitar la notificación de inicio cuando el comando se ejecuta desde el gestor de ficheros o el menú. No todas las aplicaciones soportan la notificación de inicio."
+msgstr "Seleccione esta opción para habilitar la notificación de inicio cuando el comando se ejecuta desde el administrador de archivos o el menú. No todas las aplicaciones soportan la notificación de inicio."
 
 #. TRANSLATORS: Check button label in "Create Launcher" dialog, make sure to avoid mnemonic conflicts
 #. *              and sync your translations with the translations in Thunar and xfce4-panel.
@@ -701,23 +693,20 @@ msgid "Edit Link"
 msgstr "Editar Enlace"
 
 #: ../exo-desktop-item-edit/main.c:72
-#, fuzzy
 msgid "Create a new desktop file in the given directory"
-msgstr "Crear un nuevo fichero de escritorio en el directorio especificado"
+msgstr "Crear un nuevo archivo de escritorio en el directorio especificado"
 
 #: ../exo-desktop-item-edit/main.c:73
-#, fuzzy
 msgid "Type of desktop file to create (Application or Link)"
-msgstr "Tipo de fichero de escritorio a crear (Applicación o Enlace)"
+msgstr "Tipo de archivo de escritorio a crear (Applicación o Enlace)"
 
 #: ../exo-desktop-item-edit/main.c:74
-#, fuzzy
 msgid "Preset name when creating a desktop file"
-msgstr "Preestablecer el nombre al crear un fichero de escritorio"
+msgstr "Preestablecer el nombre al crear un archivo de escritorio"
 
 #: ../exo-desktop-item-edit/main.c:75
 msgid "Preset comment when creating a desktop file"
-msgstr "Preestablecer comentario al crear un fichero de escritorio"
+msgstr "Preestablecer comentario al crear un archivo de escritorio"
 
 #: ../exo-desktop-item-edit/main.c:76
 msgid "Preset command when creating a launcher"
@@ -729,7 +718,7 @@ msgstr "Preestablecer URL al crear un enlace"
 
 #: ../exo-desktop-item-edit/main.c:78
 msgid "Preset icon when creating a desktop file"
-msgstr "Preestablecer icono al crear un fichero de escritorio"
+msgstr "Preestablecer icono al crear un archivo de escritorio"
 
 #: ../exo-desktop-item-edit/main.c:79
 #: ../exo-mount/main.c:74
@@ -740,7 +729,7 @@ msgstr "  -v, --version     Mostrar informacion sobre la versión y salir"
 #. initialize Gtk+
 #: ../exo-desktop-item-edit/main.c:125
 msgid "[FILE|FOLDER]"
-msgstr "[FICHERO|CARPETA]"
+msgstr "[DIRECTORIO]"
 
 #: ../exo-desktop-item-edit/main.c:138
 #: ../exo-mount/main.c:108
@@ -750,13 +739,13 @@ msgstr "Fallo al abrir el display"
 
 #: ../exo-desktop-item-edit/main.c:168
 msgid "No file/folder specified"
-msgstr "No se especificó el fichero/directorio"
+msgstr "No se especificó el archivo/directorio"
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:226
 #, c-format
 msgid "Unsupported desktop file type \"%s\""
-msgstr "Tipo de fichero de directorio \"%s\" no soportado"
+msgstr "Tipo de archivo de directorio \"%s\" no soportado"
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:246
@@ -766,7 +755,7 @@ msgstr "C_rear"
 #. create failed, ask the user to specify a file name
 #: ../exo-desktop-item-edit/main.c:366
 msgid "Choose filename"
-msgstr "Elegir nombre de fichero"
+msgstr "Elegir nombre de archivo"
 
 #: ../exo-desktop-item-edit/main.c:420
 #, c-format
@@ -810,7 +799,7 @@ msgstr "Unidad Smart Media"
 
 #: ../exo-hal/exo-hal.c:473
 msgid "SD/MMC Drive"
-msgstr "Lector SD/MMC"
+msgstr "Unidad SD/MMC"
 
 #: ../exo-hal/exo-hal.c:477
 msgid "Zip Drive"
@@ -1090,9 +1079,8 @@ msgid "Epiphany Web Browser"
 msgstr "Navegador Web Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
-#, fuzzy
 msgid "Enlightened Terminal Emulator"
-msgstr "Enlightened Terminal Emulator"
+msgstr "Emulador de Enlightened Terminal"
 
 #: ../exo-helper/helpers/evolution.desktop.in.in.h:1
 msgid "Novell Evolution"
@@ -1107,7 +1095,6 @@ msgid "Galeon Web Browser"
 msgstr "Navegador Web Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
-#, fuzzy
 msgid "GNOME Terminal"
 msgstr "Terminal de GNOME"
 
@@ -1149,7 +1136,7 @@ msgstr "NXterm"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
-msgstr "Navegador Opera"
+msgstr "Navegador Web Opera"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.in.h:1
 msgid "Opera Mail"
@@ -1189,7 +1176,7 @@ msgstr "Error desconocido"
 #: ../exo-mount/exo-mount-hal.c:374
 #, c-format
 msgid "Device \"%s\" not found in file system device table"
-msgstr "Dispositivo  \"%s\" no encontrado en la tabla de dispositivos del sistema de ficheros"
+msgstr "Dispositivo  \"%s\" no encontrado en la tabla de dispositivos del sistema de archivos"
 
 #. definitely not a device that we're able to mount, eject or unmount
 #: ../exo-mount/exo-mount-hal.c:224
@@ -1252,15 +1239,15 @@ msgstr "Desmontar en lugar de montar"
 
 #: ../exo-mount/main.c:68
 msgid "Mount by HAL device UDI"
-msgstr "Montar por UDI de dispositivo HAL"
+msgstr "Montar por UDI del dispositivo HAL"
 
 #: ../exo-mount/main.c:70
 msgid "Mount by HAL device UDI (not supported)"
-msgstr "Montar por UDI de dispositivo HAL (no soportado)"
+msgstr "Montar por UDI del dispositivo HAL (no soportado)"
 
 #: ../exo-mount/main.c:72
 msgid "Mount by device file"
-msgstr "Montar por fichero de dispositivo"
+msgstr "Montar por archivo de dispositivo"
 
 #: ../exo-mount/main.c:73
 msgid "Don't show any dialogs"
@@ -1268,23 +1255,20 @@ msgstr "No mostrar ninguna ventana de diálogo"
 
 #. the caller must specify either a HAL UDI or a device file
 #: ../exo-mount/main.c:138
-#, fuzzy
 msgid "Must specify HAL device UDI or device file"
-msgstr "Se debe especificar el UDI de dispositivo HAL o el fichero de dispositivo"
+msgstr "Se debe especificar el UDI del dispositivo HAL o el archivo de dispositivo"
 
 #. the caller must specify EITHER a HAL UDI or a device file
 #: ../exo-mount/main.c:146
-#, fuzzy
 msgid "Must not specify both a HAL device UDI and a device file simultaneously"
-msgstr "No se debe especificar un UDI de dispositivo HAL y un fichero de dispositivo simultáneamente"
+msgstr "No se debe especificar un UDI de dispositivo HAL y un archivo de dispositivo simultáneamente"
 
 #: ../exo-mount/main.c:154
-#, fuzzy
 msgid "Cannot mount by HAL device UDI, because HAL support was disabled for this build"
 msgstr "No se puede montar por UDI de dispositivo HAL, porque el soporte de HAL ha sido deshabilitado en esta compilación"
 
 #: ../exo-mount/main.c:161
-#, fuzzy, c-format
+#, c-format
 msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 msgstr "El UDI \"%s\" especificado no es un UDI de dispositivo HAL válido"
 
@@ -1383,7 +1367,6 @@ msgstr ""
 "                                      cuando se usa la opción --launch."
 
 #: ../exo-open/main.c:72
-#, fuzzy
 msgid "The following TYPEs are supported for the --launch command:"
 msgstr "Los siguientes TIPOs son soportados por la opción --launch:"
 
