Update NEWS Fix POTFILES.in (add midori.desktop.in.in)
(Old svn revision: 28198)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+0.3.91
+======
+- Add midori helper (bug #4446)
+- Updated translations: Carles Muñoz Gorriz (ca), Fabian Nowak (de),
+  Stavros Giannouris (el), Abel Martín (es), Kristjan Siimson (et),
+  Leandro Regueiro (gl), Andhika Padmawan (id), Nobuhiro Iwamatsu (ja),
+  Erdal Ronahi (ku), Rihards Priedītis (lv), Piotr Maliński (pl),
+  Og Maciel (pt_BR), Nuno Miguel (pt_PT), NIkitaBelobrov (ru),
+  Chao Sye (zh_CN)
+
+
 0.3.80
 ======
 - Include preferred apps dialog in the new settings manager.
