Translation updates and additions for many packages in es, fr, id, ja, nb_NO and tr
(Old svn revision: 28293)

--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -549,7 +549,7 @@ msgid ""
 msgstr ""
 "%s kommer med ABSOLUTT INGEN GARANTI,\n"
 "Du kan redistribuere kopier av %s under betingelsene i\n"
-"GNU Lesser General Public Lisens som kan finnes i %s kildekode pakken.\n"
+"GNU Lesser General Public Lisens som ligger i %s kildekodedistribusjonen.\n"
 "\n"
 
 #: ../exo-csource/main.c:311 ../exo-desktop-item-edit/main.c:161
@@ -798,11 +798,11 @@ msgstr "Zip enhet"
 
 #: ../exo-hal/exo-hal.c:481
 msgid "Jaz Drive"
-msgstr "Jaz enhet"
+msgstr "Jaz Drive"
 
 #: ../exo-hal/exo-hal.c:485
 msgid "Pen Drive"
-msgstr "Pinne enhet"
+msgstr "Minnepinne"
 
 #. TRANSLATORS: This string requires special care as %s may be the empty string. Trailing/leading whitespace will be removed.
 #: ../exo-hal/exo-hal.c:494
@@ -903,7 +903,7 @@ msgid ""
 "run commands that require a CLI environment."
 msgstr ""
 "Den prefererte terminalemulatoren vil bli brukt til å kjøre\n"
-"kommandoer som krever et CLI (kommandolinjegrensesnitt) miljø."
+"kommandoer som krever et CLI-miljø(kommandolinjegrensesnitt)."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:258
 msgid "Failed to open the documentation browser."
