--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-19  Maximilian Schleiss <maximilian@xfce.org>
+
+	* de.po: German translation update (Fabian Nowak)
+
 2008-10-18  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Norwegian Bokmal translation update (Terje Uriansrud)
