--- a/po/de.po
+++ b/po/de.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-21 21:25+0200\n"
-"PO-Revision-Date:  2008-08-21 21:29+0200\n"
+"POT-Creation-Date: 2008-10-18 16:15+0200\n"
+"PO-Revision-Date:  2008-10-18 16:18+0200\n"
 "Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -655,7 +655,7 @@ msgstr "Optionen:"
 #.
 #: ../exo-desktop-item-edit/exo-die-editor.c:430
 msgid "Use _startup notification"
-msgstr "Visuelle _Startmeldung anzeigen"
+msgstr "_Visuelle Startmeldung anzeigen"
 
 #: ../exo-desktop-item-edit/exo-die-editor.c:431
 msgid ""
@@ -1175,7 +1175,7 @@ msgstr "Encompass"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
-msgstr "Epiphany-Webbrowser"
+msgstr "Webbrowser Epiphany"
 
 #: ../exo-helper/helpers/eterm.desktop.in.in.h:1
 msgid "Enlightened Terminal Emulator"
@@ -1191,7 +1191,7 @@ msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.in.h:1
 msgid "Galeon Web Browser"
-msgstr "Galeon-Webbrowser"
+msgstr "Webbrowser Galeon"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.in.h:1
 msgid "GNOME Terminal"
@@ -1203,19 +1203,23 @@ msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.in.h:1
 msgid "Konqueror Web Browser"
-msgstr "Konqueror-Webbrowser"
+msgstr "Webbrowser Konqueror"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
 msgid "Links Text Browser"
-msgstr "Links-Textbrowser"
+msgstr "Textbrowser Links"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
 msgid "Lynx Text Browser"
-msgstr "Lynx-Textbrowser"
+msgstr "Textbrowser Lynx"
+
+#: ../exo-helper/helpers/midori.desktop.in.in.h:1
+msgid "Midori"
+msgstr "Midori"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
-msgstr "Mozilla-Webbrowser"
+msgstr "Webbrowser Mozilla"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.in.h:1
 msgid "Mozilla Mail"
@@ -1259,7 +1263,7 @@ msgstr "Unicode-RXVT"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
 msgid "W3M Text Browser"
-msgstr "W3M-Textbrowser"
+msgstr "Textbrowser W3M"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
@@ -1323,14 +1327,16 @@ msgstr ""
 #: ../exo-mount/exo-mount-hal.c:932
 #, c-format
 msgid "You are not privileged to teardown the crypto layer"
-msgstr "Sie sind nicht dazu berechtigt, die Verschlüsselungsschicht herunterzunehmen"
+msgstr ""
+"Sie sind nicht dazu berechtigt, die Verschlüsselungsschicht herunterzunehmen"
 
 #. TRANSLATORS: An application is blocking a mounted volume from being ejected.
 #: ../exo-mount/exo-mount-hal.c:937
 #, c-format
 msgid "An application is preventing the crypto layer from being torn down"
 msgstr ""
-"Eine Anwendung verhindert, dass die Verschlüsselungsschicht heruntergenommen wird"
+"Eine Anwendung verhindert, dass die Verschlüsselungsschicht heruntergenommen "
+"wird"
 
 #. TRANSLATORS: User tried to unmount a volume, but is not privileged to do so.
 #: ../exo-mount/exo-mount-hal.c:1021
@@ -1401,7 +1407,7 @@ msgstr ""
 #, c-format
 msgid "The specified UDI \"%s\" is not a valid HAL device UDI"
 msgstr ""
-"Bei der angegebenen UDI \"%s\" handelt es sich nicht um eine gültige HAL-"
+"Bei der angegebenen UDI »%s« handelt es sich nicht um eine gültige HAL-"
 "Geräte-UDI"
 
 #. the caller must not specify both eject and unmount
