Translation updates for fr, ja, tr
(Old svn revision: 28346)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-10-21  Maximilian Schleiss <maximilian@xfce.org>
+
+	* tr.po, LINGUAS: Turkish translation added (Gökmen Görgen)
+ 
 2008-10-19  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: German translation update (Fabian Nowak)
