--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+0.3.92
+======
+- Make Preferred Applications dialog pluggable into the new settings
+  manager.
+
+
 0.3.91
 ======
 - Add midori helper (bug #4446)
