Translations updates and additions HUGE
(Old svn revision: 28493)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-10-29  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martin)
+	* sq.po: Albanian translation update (Besnik Bleta)
+
 2008-10-21  Maximilian Schleiss <maximilian@xfce.org>
 
 	* tr.po, LINGUAS: Turkish translation added (Gökmen Görgen)
