--- a/po/cs.po
+++ b/po/cs.po
@@ -1,14 +1,14 @@
 # Czech translations for exo package.
 # Copyright (C) 2004-2006 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Michal Várady <miko.vaji@gmail.com>, 2006.
+# Michal Várady <miko.vaji@gmail.com>, 2006-2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2007-08-14 21:36+0100\n"
+"PO-Revision-Date: 2008-11-01 22:35+0100\n"
 "Last-Translator: Michal Várady <miko.vaji@gmail.com>\n"
 "Language-Team: Czech <translation-team-cs@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -484,7 +484,7 @@ msgstr "Příkaz pro opakované spuštění"
 
 #: ../exo/exo-xsession-client.c:155
 msgid "Session restart command"
-msgstr "Příkaz pro opakované spuštění sezení"
+msgstr "Příkaz pro opakované spuštění relace"
 
 #: ../exo-csource/main.c:283
 #, c-format
