Translation updates and additions - de es ku tr
(Old svn revision: 28595)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-02  Maximilian Schleiss <maximilian@xfce.org>
+
+	* es.po: Spanish translation update (Abel Martín)
+
 2008-11-01  Michal Várady <miko.vaji@gmail.com>
 
 	* cs.po: Czech translation updated
