--- a/po/es.po
+++ b/po/es.po
@@ -402,7 +402,7 @@ msgstr "E_stilo de barra de herramientas"
 
 #: ../exo/exo-toolbars-view.c:766
 msgid "_Desktop Default"
-msgstr "_Escritorio por defecto"
+msgstr "_Escritorio predeterminado"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Icons only"
@@ -968,7 +968,7 @@ msgid ""
 "as default Web Browser for Xfce:"
 msgstr ""
 "Especifique la aplicación que quiere usar\n"
-"como navegador web por defecto para Xfce:"
+"como navegador web predeterminado para Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:543
 msgid ""
@@ -976,7 +976,7 @@ msgid ""
 "as default Mail Reader for Xfce:"
 msgstr ""
 "Especifique la aplicación que quiere usar\n"
-"como lector de correo por defecto para Xfce:"
+"como lector de correo predeterminado para Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:544
 msgid ""
@@ -984,7 +984,7 @@ msgid ""
 "as default Terminal Emulator for Xfce:"
 msgstr ""
 "Especifique la aplicación que quiere usar\n"
-"como emulador de terminal por defecto para Xfce:"
+"como emulador de terminal predeterminado para Xfce:"
 
 #: ../exo-helper/exo-helper-chooser.c:610
 msgid "Browse the file system to choose a custom command."
@@ -1363,7 +1363,7 @@ msgid ""
 "  --working-directory DIRECTORY       Default working directory for applications\n"
 "                                      when using the --launch option."
 msgstr ""
-"  --working-directory DIRECTORIO       Directorio de trabajo por defecto para aplicaciones\n"
+"  --working-directory DIRECTORIO       Directorio de trabajo predeterminado para aplicaciones\n"
 "                                      cuando se usa la opción --launch."
 
 #: ../exo-open/main.c:72
