* exo/exo-icon-view.c: Revert accidently committed painting code. $
(Old svn revision: 28715)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-10	Jannis Pohlmann <jannis@xfce.org>
 
+	* exo/exo-icon-view.c: Revert accidently committed painting code.
+
+2008-11-10	Jannis Pohlmann <jannis@xfce.org>
+
 	* configure.in.in, exo/exo-md5.c: Get rid of external MD5 functions.
 
 2008-11-06	Brian Tarricone <bjt23@cornell.edu>
