* NEWS: Update NEWS file for the upcoming beta2 release.
(Old svn revision: 28720)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-11-11	Jannis Pohlmann <jannis@xfce.org>
 
+	* NEWS: Update NEWS file for the upcoming beta2 release.
+
+2008-11-11	Jannis Pohlmann <jannis@xfce.org>
+
 	* exo/exo-icon-view.c: Add hack for drawing the background of text 
 	  renderers inside the icon view. GtkIconView uses a similar hack, but
 	  this should really be fixed in GtkCellRendererText.
