Xfce-trunk BAsque translation updates
(Old svn revision: 28774)

--- a/po/eu.po
+++ b/po/eu.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-05-20 13:45+0200\n"
-"PO-Revision-Date: 2008-11-05 16:18+0200\n"
+"PO-Revision-Date: 2008-11-09 15:56+0200\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <Librezale@librezale.org>\n"
 "Language: eu\n"
@@ -536,6 +536,7 @@ msgid ""
 msgstr ""
 "Copyright (c) %s\n"
 "        os-cillation e.K. All rights reserved.\n"
+"\n"
 "Benedikt Meurer-ek <benny@xfce.org> idatzia.\n"
 "\n"
 
@@ -1363,10 +1364,9 @@ msgid ""
 "where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
-"  --launch MOTA [PARAMETROak...]       MOTA motako aplikazio "
-"gogokoena                                       abiaraz PARAMETROak "
-"parametroez non\n"
-"                                      mota hauetako balio bat izan behar da."
+"  --launch MOTA [PARAMETROak...]       Abiarazi MOTA motako aplikazio\n"
+"                                       gogokoena PARAMETROak parametroez non\n"
+"                                      MOTA hauetako balio bat izan behar da."
 
 #: ../exo-open/main.c:69
 msgid ""
