--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-12 Og Maciel <ogmaciel@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation by
+	Og Maciel.
+
 2008-11-11  Piarres Beobide <pi@beobide.net>
 
         * eu.po: Basque translation update
