--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -15,7 +15,7 @@ msgstr ""
 "Last-Translator: Og Maciel <ogmaciel@gnome.org>\n"
 "Language-Team: Brazilian Portuguese <ldp-br@bazar2.conectiva.com.br>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Portuguese\n"
 "X-Poedit-Country: BRAZIL\n"
@@ -202,7 +202,7 @@ msgstr "Arquivos de imagens"
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
 msgid "Select _icon from:"
-msgstr "Escolher ícone de:"
+msgstr "Escolher í_cone de:"
 
 #: ../exo/exo-icon-view.c:653
 msgid "Column Spacing"
@@ -402,7 +402,7 @@ msgstr "E_stilo de barra de ferramentas"
 
 #: ../exo/exo-toolbars-view.c:766
 msgid "_Desktop Default"
-msgstr "Padrão de área de trabalho"
+msgstr "Padrão de área _de trabalho"
 
 #: ../exo/exo-toolbars-view.c:775
 msgid "_Icons only"
