Turkish translation update
(Old svn revision: 28815)

--- a/po/tr.po
+++ b/po/tr.po
@@ -26,9 +26,8 @@ msgstr "Durumu izle"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
 #: ../exo/exo-cell-renderer-icon.c:146
-#, fuzzy
 msgid "Render differently based on the selection state."
-msgstr "Seçim durumuna göre farklılaştırma."
+msgstr "Seçim durumuna göre farklılaştırma yap."
 
 #: ../exo/exo-cell-renderer-icon.c:167
 msgid "Icon"
@@ -264,7 +263,6 @@ msgid "Space which is inserted at the edges of the icon view"
 msgstr "Simge görüntüsünün kenarlarına eklenmiş boşluk"
 
 #: ../exo/exo-icon-view.c:754
-#, fuzzy
 msgid "Markup column"
 msgstr "Biçimleme dikeci"
 
@@ -306,7 +304,7 @@ msgstr "Arama Dikeci"
 
 #: ../exo/exo-icon-view.c:848
 msgid "Model column to search through when searching through item"
-msgstr ""
+msgstr "Öğeler arasında arama yapmak için kullanılacak model dikeci"
 
 #: ../exo/exo-icon-view.c:862
 msgid "Selection mode"
@@ -854,7 +852,7 @@ msgstr "Ses CD'si"
 #: ../exo-hal/exo-hal.c:802
 #, c-format
 msgid "%s Removable Volume"
-msgstr "%s Ayarlanabilir Birim"
+msgstr "%s Ayrılabilir Birim"
 
 #: ../exo-hal/exo-hal.c:804
 #, c-format
@@ -1234,14 +1232,12 @@ msgid "The volume \"%s\" was probably mounted manually on the command line"
 msgstr "\"%s\" sürücüsü, büyük olasılıkla komut satırı üzerinden bağlandı"
 
 #: ../exo-mount/main.c:65
-#, fuzzy
 msgid "Eject rather than mount"
-msgstr "Bağlamak yerine çıkarmayı öner"
+msgstr "Bağlamak yerine çıkar"
 
 #: ../exo-mount/main.c:66
-#, fuzzy
 msgid "Unmount rather than mount"
-msgstr "Bağlamak yerine bağlamamayı öner"
+msgstr "Bağlamak yerine ayır"
 
 #: ../exo-mount/main.c:68
 msgid "Mount by HAL device UDI"
