--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-15  Eren Türkay <erenturkay@xfce.org>
+
+        * tr.po: Turkish translation update (Gökmen Görgen)
+
 2008-11-12 Og Maciel <ogmaciel@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation by
