--- a/po-doc/ChangeLog
+++ b/po-doc/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-16  Maximilian Schleiss <maximilian@xfce.org>
+
+        * tr.po; LINGUAS: Turkish translation added (Samed Beyribey)
+
 2007-02-04  Maximilian Schleiss <maximilian@xfce.org>
 
 	* fr.po: Fixed the credits string.
