--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-11-18  Maximilian Schleiss <maximilian@xfce.org>
+
+	* sq.po: Albanian translation update (Besnik Bleta)
+
 2008-11-16  Maximilian Schleiss <maximilian@xfce.org>
 
 	* de.po: German translation update (Fabian Nowak)
